WIP: almost done; should now make gpio calls

--- a/server/webclient/src/templates/index.html
+++ b/server/webclient/src/templates/index.html
@@ -8,10 +8,16 @@
 
 <body>
     <div id="app">
-        <div id="content"></div>
         <div id="controls">
-            <div id="joystick"></div>
-            <div id="bambutton"></div>
+            <div id="joystick">
+                <div id="content"></div>
+                123
+            </div>
+            <div id="bambutton">
+                <button id="bamboozle">
+                    BAMBOOZLE!!
+                </button>
+            </div>
         </div>
     </div>
 </body>
