WIP: A working, moving & bamboozling prototype

--- a/server/webclient/src/templates/index.html
+++ b/server/webclient/src/templates/index.html
@@ -17,6 +17,9 @@
                 <button id="bamboozle">
                     BAMBOOZLE!!
                 </button>
+                <button id="move">
+                    MOVE!!!
+                </button>
             </div>
         </div>
     </div>
