--- a/server/webclient/src/templates/index.html
+++ b/server/webclient/src/templates/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title of the document</title>
+    <title>Robomboozle!</title>
 </head>
 
 <body>
     <div id="app">
-        <div id="controls">
+        <!-- <div id="controls">
             <div id="joystick">
                 <div id="content"></div>
                 123
@@ -21,7 +21,7 @@
                     MOVE!!!
                 </button>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 
