WIP: Improved the network layer

--- a/server/webclient/src/styles/Video.css
+++ b/server/webclient/src/styles/Video.css
@@ -1,7 +1,16 @@
-#video, #video > canvas {
-    width: 100vw;
-    height: 100vh;
+#video {
+    width   : 100vw;
+    height  : 100vh;
     position: absolute;
-    top: 0;
-    left: 0;
+    top     : 0;
+    left    : 0;
+}
+
+#video>canvas {
+    position  : absolute;
+    left      : 50%;
+    top       : 50%;
+    min-width : 100vw;
+    min-height: 100vh;
+    transform : translate(-50%, -50%);
 }
